force-app/main/default/objects/CSO__c/CSO__c.object-meta.xml
<CustomObject>
    <label>CSO</label>
    <nameField>
        <label>CSO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>