force-app/main/default/objects/CSO__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CSO</relationshipLabel>
    <relationshipName>CSO</relationshipName>
    <type>Lookup</type>
</CustomField>