force-app/main/default/objects/CSO__c/fields/Allow_TPV_s__c.field-meta.xml
<CustomField>
    <fullName>Allow_TPV_s__c</fullName>
    <label>Allow TPV’s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Only with written consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>