force-app/main/default/objects/CSO__c/fields/Background_Check_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Requirements__c</fullName>
    <label>Background Check Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>