force-app/main/default/objects/CSO__c/fields/Country_Criminal__c.field-meta.xml
<CustomField>
    <fullName>Country_Criminal__c</fullName>
    <label>Country Criminal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>