force-app/main/default/objects/CSO__c/fields/CPLastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>CPLastUpdateDate__c</fullName>
    <inlineHelpText>The date and time of the last change through ClosePlan, for example, a change in Account Plan Scorecard</inlineHelpText>
    <label>CP: Last Update Date</label>
    <type>DateTime</type>
</CustomField>