force-app/main/default/objects/CSO__c/fields/DMV__c.field-meta.xml
<CustomField>
    <fullName>DMV__c</fullName>
    <label>DMV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes if job requires driving</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>