force-app/main/default/objects/CSO__c/fields/Does_Client_Have_Audit_Clause__c.field-meta.xml
<CustomField>
    <fullName>Does_Client_Have_Audit_Clause__c</fullName>
    <label>Does Client Have Audit Clause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>