force-app/main/default/objects/CSO__c/fields/Drug_Health_Screen_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Drug_Health_Screen_Requirement__c</fullName>
    <label>Drug/Health Screen Requirement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 Panel</fullName>
            </value>
            <value>
                <fullName>6 Panel</fullName>
            </value>
            <value>
                <fullName>7 Panel</fullName>
            </value>
            <value>
                <fullName>8 Panel</fullName>
            </value>
            <value>
                <fullName>9 Panel</fullName>
            </value>
            <value>
                <fullName>10 Panel</fullName>
            </value>
            <value>
                <fullName>Urine</fullName>
            </value>
            <value>
                <fullName>Hair</fullName>
            </value>
            <value>
                <fullName>Flu Shot</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>See Additional Notes</fullName>
            </value>
            <value>
                <fullName>Other Safety/Occupation Health Screening</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>None so these will need to be mapped</fullName>
                <isActive>false</isActive>
                <label>None so these will need to be mapped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>