force-app/main/default/objects/CSO__c/fields/Drug_Screen_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Drug_Screen_Vendor__c</fullName>
    <label>Drug Screen Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Randstad Preferred</fullName>
            </value>
            <value>
                <fullName>AccurateNow</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>AWSI</fullName>
            </value>
            <value>
                <fullName>EScreen</fullName>
            </value>
            <value>
                <fullName>HireRight</fullName>
            </value>
            <value>
                <fullName>InfoCubic</fullName>
            </value>
            <value>
                <fullName>Infomart</fullName>
            </value>
            <value>
                <fullName>LabCorp</fullName>
            </value>
            <value>
                <fullName>Quest</fullName>
            </value>
            <value>
                <fullName>Sterling</fullName>
            </value>
            <value>
                <fullName>Truscreen</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
            <value>
                <fullName>See Additional Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>