force-app/main/default/objects/CSO__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All degrees</fullName>
            </value>
            <value>
                <fullName>Certifications</fullName>
            </value>
            <value>
                <fullName>Education for certain roles</fullName>
            </value>
            <value>
                <fullName>Highest degree</fullName>
            </value>
            <value>
                <fullName>HS Diploma/GED</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>