force-app/main/default/objects/CSO__c/fields/Effective_date_of_change__c.field-meta.xml
<CustomField>
    <fullName>Effective_date_of_change__c</fullName>
    <label>Effective date of change</label>
    <type>Date</type>
</CustomField>