force-app/main/default/objects/CSO__c/fields/Employment__c.field-meta.xml
<CustomField>
    <fullName>Employment__c</fullName>
    <label>Employment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>