force-app/main/default/objects/CSO__c/fields/Federal_Criminal__c.field-meta.xml
<CustomField>
    <fullName>Federal_Criminal__c</fullName>
    <label>Federal Criminal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>