force-app/main/default/objects/CSO__c/fields/International__c.field-meta.xml
<CustomField>
    <fullName>International__c</fullName>
    <label>International</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>If reside outside of US in last 7 years - Yes</fullName>
            </value>
            <value>
                <fullName>If reside outside of US in last 10 years - Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>