force-app/main/default/objects/CSO__c/fields/Legacy_BH_Date_Modified__c.field-meta.xml
<CustomField>
    <fullName>Legacy_BH_Date_Modified__c</fullName>
    <description>Legacy BH Last Modified Date, captured during data load</description>
    <inlineHelpText>Legacy BH Last Modified Date, captured during data load</inlineHelpText>
    <label>Legacy BH Date Modified</label>
    <type>DateTime</type>
</CustomField>