force-app/main/default/objects/CSO__c/fields/Legacy_BH_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_BH_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy BH ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>