force-app/main/default/objects/CSO__c/fields/List_Of_Client_Specific_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>List_Of_Client_Specific_Paperwork__c</fullName>
    <label>List Of Client Specific Paperwork</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>