force-app/main/default/objects/CSO__c/fields/Perm_fee__c.field-meta.xml
<CustomField>
    <fullName>Perm_fee__c</fullName>
    <label>Perm fee %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>