force-app/main/default/objects/CSO__c/fields/PS_Billing_Client_Description__c.field-meta.xml
<CustomField>
    <fullName>PS_Billing_Client_Description__c</fullName>
    <label>PS Billing Client Description</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>