force-app/main/default/objects/CSO__c/fields/PS_Billing_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>PS_Billing_Client_ID__c</fullName>
    <label>PS Billing Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>