force-app/main/default/objects/CSO__c/fields/Recurring_Drug_Test__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Drug_Test__c</fullName>
    <label>Recurring Drug Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes annually</fullName>
            </value>
            <value>
                <fullName>Yes quarterly</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>See Additional Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>