force-app/main/default/objects/CSO__c/fields/Screens_Billable_To_The_Client__c.field-meta.xml
<CustomField>
    <fullName>Screens_Billable_To_The_Client__c</fullName>
    <label>Screens Billable To The Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>