force-app/main/default/objects/CSO__c/fields/State_Criminal__c.field-meta.xml
<CustomField>
    <fullName>State_Criminal__c</fullName>
    <label>State Criminal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>